@@ -28,6 +28,15 @@ class Net::SSLeay {
   # Class Methods
   native static method new : Net::SSLeay ($ssl_ctx : Net::SSLeay::SSL_CTX);
   
+  private static method new_with_pointer : Net::SSLeay ($pointer : Address, $options : object[] = undef) {
+    
+    my $self = new Net::SSLeay;
+    
+    Fn->set_pointer($self, $pointer);
+    
+    return $self;
+  }
+  
   native static method alert_desc_string_long : string ($value : int);
   
   native static method load_error_strings : void ();
